src/test/ui/resolve/issue-101749.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `rect1`
  --> $DIR/issue-101749.rs:19:20
   |
LL |     println!("{}", rect1::area());
   |                    ^^^^^ use of undeclared crate or module `rect1`
   |
help: `rect1` is not a crate or module, maybe you meant to call instance method
   |
LL |     println!("{}", rect1.area());
   |                    ~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
